@@ -452,6 +452,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				RelativePath=".\xbmc\KaiItem.cpp">
 			</File>
 			<File
+				RelativePath=".\xbmc\lib\libscrobbler\md5.c">
+			</File>
+			<File
+				RelativePath=".\xbmc\lib\libscrobbler\scrobbler.cpp">
+			</File>
+			<File
 				RelativePath=".\xbmc\stdafx.cpp">
 			</File>
 			<File
@@ -2029,10 +2035,10 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\cores\sidplayer\audio\AudioDrv.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
 				</File>
 				<File
-					RelativePath=".\xbmc\cores\sidplayer\audio\config.h">
+					RelativePath=".\xbmc\cores\sidplayer\config.h">
 				</File>
 				<File
 					RelativePath=".\xbmc\cores\sidplayer\IniConfig.cpp">
@@ -2225,6 +2231,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					Name="DVDCodecs"
 					Filter="">
 					<File
+						RelativePath=".\xbmc\cores\dvdplayer\DVDCodecs\DTSHelper.c">
+					</File>
+					<File
+						RelativePath=".\xbmc\cores\dvdplayer\DVDCodecs\DTSHelper.h">
+					</File>
+					<File
 						RelativePath=".\xbmc\cores\dvdplayer\DVDCodecs\DVDAudioCodec.h">
 					</File>
 					<File
@@ -2238,6 +2250,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					</File>
 					<File
 						RelativePath=".\xbmc\cores\dvdplayer\DVDCodecs\DVDAudioCodecLiba52.h">
+					</File>
+					<File
+						RelativePath=".\xbmc\cores\dvdplayer\DVDCodecs\DVDAudioCodecPassthrough.cpp">
+					</File>
+					<File
+						RelativePath=".\xbmc\cores\dvdplayer\DVDCodecs\DVDAudioCodecPassthrough.h">
 					</File>
 					<File
 						RelativePath=".\xbmc\cores\dvdplayer\DVDCodecs\DVDCodecUtils.cpp">
@@ -2554,25 +2572,6 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				</File>
 				<File
 					RelativePath=".\xbmc\lib\sqlLite\sqlitedataset.h">
-				</File>
-			</Filter>
-			<Filter
-				Name="libScrobbler"
-				Filter="">
-				<File
-					RelativePath=".\xbmc\lib\libscrobbler\errors.h">
-				</File>
-				<File
-					RelativePath=".\xbmc\lib\libscrobbler\md5.c">
-				</File>
-				<File
-					RelativePath=".\xbmc\lib\libscrobbler\md5.h">
-				</File>
-				<File
-					RelativePath=".\xbmc\lib\libscrobbler\scrobbler.cpp">
-				</File>
-				<File
-					RelativePath=".\xbmc\lib\libscrobbler\scrobbler.h">
 				</File>
 			</Filter>
 		</Filter>
