@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 18-04-2005 added: Support for AC3/DTS passthrough for dvdplayer and partly fixed audiostream selection from dvdmenu.
   - 17-04-2005 fixed: PAPlayer seeking was way too fast.
   - 17-04-2005 fixed: Time display in VBR files after seeking is now more accurate.
   - 17-04-2005 fixed: .Cue sheet sort order in sort by files.
